Closed
Bug 126439
Opened 24 years ago
Closed 24 years ago
Alt+F4 beeps in some window
Categories
(Core :: DOM: UI Events & Focus Handling, defect)
Tracking
()
VERIFIED
FIXED
People
(Reporter: neil, Assigned: deanis74)
References
Details
Attachments
(1 file)
|
864 bytes,
patch
|
mikepinkerton
:
review+
bugzilla
:
superreview+
asa
:
approval+
|
Details | Diff | Splinter Review |
Using Build ID: 2002021803 on Windows 95 and 98
Steps to reproduce problem:
1. Open/focus one of the windows below and use Alt+F4 to close it
Actual results: Beep before close action
Additional information: The following windows are affected:
Navigator; MailNews; Composer; Address Book; Bookmarks; History;
JavaScript Console; DOM Inspector
The following windows are not affected:
Help; Preferences; Search Messages; Alert; Prompt
Comment 1•24 years ago
|
||
Aaaaaahhh! The bells. They're won't stop ringing. Make them stop.....
Keywords: mozilla0.9.9,
nsbeta1
Comment 2•24 years ago
|
||
Seeing this on Windows XP with nightly builds from 21 and 22nd of Feb.
I've seen this behaviour in the last few months once before as well.
Related to the fix for bug 959? I also get a beep when pressing Alt+O, for
example, or any combination that doesn't have a menu or HTML access key defined.
cc: jag
Or this check-in, which is... crap, it's mine.
http://bonsai.mozilla.org/cvsview2.cgi?diff_mode=context&whitespace_mode=show&file=nsMenuBarFrame.cpp&root=/cvsroot&subdir=mozilla/layout/xul/base/src&command=DIFF_FRAMESET&rev1=1.88&rev2=1.89
Can someone back this out or try a build just before and just after Feb 14 at
19:53 and see if it's my fault? I have a feeling I should be checking mIsActive
in there.
99% sure it's me. A quick trace through nsMenuBarListener just checks if Alt is
down. My beeping never checks if the menu bar is active. Also, all the windows
that Neil listed that beep have menu bars, and all the windows that don't beep
don't have menu bars.
Taking
Assignee: aaronl → dean_tessman
*** Bug 126332 has been marked as a duplicate of this bug. ***
Comment 7•24 years ago
|
||
reverting to rev 1.88 of nsMenuBarFrame.cpp fixes this for me; Alt-F4 does
not beep when closing the active window.
I apologize profusely. This should be a simple two-line fix.
Status: NEW → ASSIGNED
| Assignee | ||
Comment 10•24 years ago
|
||
this fixes it. jrgm, can you test and r=? jag or blake, can you sr=?
Comment 11•24 years ago
|
||
Comment on attachment 71831 [details] [diff] [review]
cvs diff -u /layout/xul/base/src
r=pink
Attachment #71831 -
Flags: review+
Comment 12•24 years ago
|
||
Comment on attachment 71831 [details] [diff] [review]
cvs diff -u /layout/xul/base/src
sr=blake
Attachment #71831 -
Flags: superreview+
Comment 13•24 years ago
|
||
Comment on attachment 71831 [details] [diff] [review]
cvs diff -u /layout/xul/base/src
a=asa (on behalf of drivers) for checkin to the 0.9.9 branch and the 1.0 trunk
Attachment #71831 -
Flags: approval+
Comment 14•24 years ago
|
||
Checked into the branch. Dean says he'll do the trunk.
| Assignee | ||
Comment 15•24 years ago
|
||
FYI: the check-in that caused this was to fix bug 53029
| Assignee | ||
Comment 16•24 years ago
|
||
checked into the trunk
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Comment 17•23 years ago
|
||
vrfy'd fixed using 2002.03.13.09 comm bits on win2k --tested with the windows
listed in the original comment (except for DOM Inspector which isn't in the
builds i use): no beeping.
Status: RESOLVED → VERIFIED
Updated•6 years ago
|
Component: Keyboard: Navigation → User events and focus handling
You need to log in
before you can comment on or make changes to this bug.
Description
•