bug 126439 - Alt+F4 beeps in some window only beep if the menu bar is active, instead of whenever a matching shortcut key isn't found r=pink, sr=blake, a=asa